# metrics_ipc_collector

./: .pre-commit-config.yaml  .taplo.toml  Cargo.toml  README.md
.github/workflows/: test.yml
examples/: listener.rs  listener_async.rs  sender.rs  unnamed_pipe.rs
src/: collector.rs  error.rs  events.rs  lib.rs  recorder.rs
src/collector/: handlers.rs  socket.rs  unnamed_pipe.rs
src/recorder/: socket.rs  unnamed_pipe.rs
