[package]
name        = "metrics_ipc_collector"
version     = "0.3.0"
edition     = "2024"
description = "A metrics collector that uses interprocess communication to collect metrics from multiple processes."
license     = "Apache-2.0"
readme      = "README.md"
authors     = ["Cian Butler <butlerx@notthe.cloud>"]
repository  = "https://github.com/butlerx/metrics_ipc_collector"
categories  = ["development-tools::debugging"]
keywords    = ["interprocess", "ipc", "metrics", "pipe", "telemetry"]

[dependencies]
interprocess = "2.2"
log = "0.4"
metrics = "0.24"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.14"
tokio = { version = "1", features = [
  "io-util",
  "macros",
  "rt-multi-thread",
], optional = true }

[dev-dependencies]
ctrlc                       = "3.4"
metrics-exporter-prometheus = "0.17"

[features]
# Enable async support with Tokio runtime. When enabled, collector operations use async tasks and require a Tokio runtime.
default = []
tokio   = ["dep:tokio", "interprocess/tokio"]
